Upped pom version and fixed pmd warnings in code.